Cookie and Product

--- a/products.html
+++ b/products.html
@@ -40,9 +40,63 @@
 
 
 
+<form action="product-description.php"
+          method="post">
+
+
+<div class="l-content">
+
+<br><a href = "cookie.php"> Last Five Visited Pages </a><br><br>
+<a href = "cookie_count.php"> Five Most Visited Pages </a><br><br>
+    <div class="pricing-tables pure-g">
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="pricing-table pricing-table-free">
+                <div class="pricing-table-header">
+                    <h2>$5.99 <br> Turkey</h2>
+
+                    <span class="pricing-table-price">
+                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-catagory-sandwich-autumncarvedturkey.jpg">
+                    </span>
+                </div>
 
 
 
+                <button type="submit"  name="action" value="1" class="button-choose pure-button">Choose</button>
+            </div>
+        </div>
+
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="pricing-table pricing-table-biz pricing-table-selected">
+                <div class="pricing-table-header">
+                    <h2>$6.99 <br> Bacon</h2>
+
+                    <span class="pricing-table-price">
+                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-freshfit_carvedturkey.jpg">
+                    </span>
+                </div>
+
+
+
+                <button  type="submit" name="action" value="2" class="button-choose pure-button">Choose</button>
+            </div>
+        </div>
+
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="pricing-table pricing-table-enterprise">
+                <div class="pricing-table-header">
+                    <h2>$7.99 <br> Chicken</h2>
+
+                    <span class="pricing-table-price">
+                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-freshfit_carvedturkey.jpg">
+                    </span>
+                </div>
+
+
+
+                <button type="submit" name="action" value="3" class="button-choose pure-button">Choose</button>
+            </div>
+        </div>
+    </div> <!-- end pricing-tables -->
 <div class="l-content">
 
 
@@ -50,55 +104,158 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-free">
                 <div class="pricing-table-header">
-                    <h2>Vegan</h2>
+                    <h2>$3.99 <br> Roast Beef</h2>
 
                     <span class="pricing-table-price">
-                        $10
+                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-ccc.jpg">
                     </span>
                 </div>
 
 
 
-                <button class="button-choose pure-button">Choose</button>
+                <button type="submit" name="action" value="4"  class="button-choose pure-button">Choose</button>
             </div>
         </div>
 
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-biz pricing-table-selected">
                 <div class="pricing-table-header">
-                    <h2>Fish&Chicken</h2>
+                    <h2>$5.99 <br> Steak and Cheese</h2>
 
                     <span class="pricing-table-price">
-                        $13
+                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-rstbeef.jpg">
                     </span>
                 </div>
 
 
 
-                <button class="button-choose pure-button">Choose</button>
+                <button  type="submit" name="action" value="5" class="button-choose pure-button">Choose</button>
             </div>
         </div>
 
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-enterprise">
                 <div class="pricing-table-header">
-                    <h2>Mix It All</h2>
+                    <h2>$6.99 <br> Tuna</h2>
 
                     <span class="pricing-table-price">
-                        $15
+                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-rotisserie%20(1).jpg">
                     </span>
                 </div>
 
 
 
-                <button class="button-choose pure-button">Choose</button>
+                <button  type="submit" name="action" value="6" class="button-choose pure-button">Choose</button>
+            </div>
+        </div>
+    </div> <!-- end pricing-tables -->
+    <div class="l-content">
+
+
+    <div class="pricing-tables pure-g">
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="pricing-table pricing-table-free">
+                <div class="pricing-table-header">
+                    <h2>$8.99 <br> Veggie</h2>
+
+                    <span class="pricing-table-price">
+                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-spcyital.jpg">
+                    </span>
+                </div>
+
+
+
+                <button type="submit" name="action" value="7" class="button-choose pure-button">Choose</button>
+            </div>
+        </div>
+
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="pricing-table pricing-table-biz pricing-table-selected">
+                <div class="pricing-table-header">
+                    <h2>$7.99 <br> Italian</h2>
+
+                    <span class="pricing-table-price">
+                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-stkchs.jpg">
+                    </span>
+                </div>
+
+
+
+                <button type="submit"  name="action" value="8" class="button-choose pure-button">Choose</button>
+            </div>
+        </div>
+
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="pricing-table pricing-table-enterprise">
+                <div class="pricing-table-header">
+                    <h2>$4.99 <br> Black Forest ham</h2>
+
+                    <span class="pricing-table-price">
+                      <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-subclub.jpg">
+                    </span>
+                </div>
+
+
+
+                <button type="submit" name="action" value="9" class="button-choose pure-button">Choose</button>
+            </div>
+        </div>
+    </div> <!-- end pricing-tables -->
+    <div class="l-content">
+
+
+    <div class="pricing-tables pure-g">
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="pricing-table pricing-table-free">
+                <div class="pricing-table-header">
+                    <h2>$8.99 <br> Steak Egg</h2>
+
+                    <span class="pricing-table-price">
+                    <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-vegdlt.jpg">
+                    </span>
+                </div>
+
+
+
+                <button type="submit" name="action" value="10" class="button-choose pure-button">Choose</button>
+            </div>
+        </div>
+
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="pricing-table pricing-table-biz pricing-table-selected">
+                <div class="pricing-table-header">
+                    <h2>$7.99 <br> Egg Cheese</h2>
+
+                    <span class="pricing-table-price">
+                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-brkfst-baceggchs.jpg">
+                    </span>
+                </div>
+
+
+
+                <button  type="submit" name="action" value="11" class="button-choose pure-button">Choose</button>
+            </div>
+        </div>
+
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="pricing-table pricing-table-enterprise">
+                <div class="pricing-table-header">
+                    <h2>$9.99 <br> Bacon Egg</h2>
+
+                    <span class="pricing-table-price">
+                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-brkfst-hameggchs.jpg">
+                    </span>
+                </div>
+
+
+
+                <button  type="submit" name="action" value="12" class="button-choose pure-button">Choose</button>
             </div>
         </div>
     </div> <!-- end pricing-tables -->
 
 
-
-
+</form>
 
 
 
