--- a/products.html
+++ b/products.html
@@ -47,7 +47,9 @@
 <div class="l-content">
 
 <br><a href = "cookie.php"> Last Five Visited Pages </a><br><br>
+
 <a href = "cookie_count.php"> Five Most Visited Pages </a><br><br>
+
     <div class="pricing-tables pure-g">
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-free">
@@ -104,7 +106,7 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-free">
                 <div class="pricing-table-header">
-                    <h2>$3.99 <br> Roast Beef</h2>
+                    <h2>$3.99 <br> RoastBeef</h2>
 
                     <span class="pricing-table-price">
                         <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-ccc.jpg">
@@ -120,7 +122,7 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-biz pricing-table-selected">
                 <div class="pricing-table-header">
-                    <h2>$5.99 <br> Steak and Cheese</h2>
+                    <h2>$5.99 <br> SteakandCheese</h2>
 
                     <span class="pricing-table-price">
                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-rstbeef.jpg">
@@ -188,7 +190,7 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-enterprise">
                 <div class="pricing-table-header">
-                    <h2>$4.99 <br> Black Forest ham</h2>
+                    <h2>$4.99 <br> BlackForestHam</h2>
 
                     <span class="pricing-table-price">
                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-subclub.jpg">
@@ -208,7 +210,7 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-free">
                 <div class="pricing-table-header">
-                    <h2>$8.99 <br> Steak Egg</h2>
+                    <h2>$8.99 <br> SteakEgg</h2>
 
                     <span class="pricing-table-price">
                     <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-vegdlt.jpg">
@@ -224,7 +226,7 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-biz pricing-table-selected">
                 <div class="pricing-table-header">
-                    <h2>$7.99 <br> Egg Cheese</h2>
+                    <h2>$7.99 <br> EggCheese</h2>
 
                     <span class="pricing-table-price">
                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-brkfst-baceggchs.jpg">
@@ -240,7 +242,7 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="pricing-table pricing-table-enterprise">
                 <div class="pricing-table-header">
-                    <h2>$9.99 <br> Bacon Egg</h2>
+                    <h2>$9.99 <br> BaconEgg</h2>
 
                     <span class="pricing-table-price">
                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-brkfst-hameggchs.jpg">
