images folder added and products.html page updated

--- a/products.html
+++ b/products.html
@@ -57,7 +57,7 @@
                     <h2>$5.99 <br> Turkey</h2>
 
                     <span class="pricing-table-price">
-                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-catagory-sandwich-autumncarvedturkey.jpg">
+                        <img src="images/1.jpg">
                     </span>
                 </div>
 
@@ -73,7 +73,7 @@
                     <h2>$6.99 <br> Bacon</h2>
 
                     <span class="pricing-table-price">
-                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-freshfit_carvedturkey.jpg">
+                        <img src="images/2.jpg">
                     </span>
                 </div>
 
@@ -89,7 +89,7 @@
                     <h2>$7.99 <br> Chicken</h2>
 
                     <span class="pricing-table-price">
-                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-freshfit_carvedturkey.jpg">
+                       <img src="images/3.jpg">
                     </span>
                 </div>
 
@@ -109,7 +109,7 @@
                     <h2>$3.99 <br> RoastBeef</h2>
 
                     <span class="pricing-table-price">
-                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-ccc.jpg">
+                        <img src="images/4.jpg">
                     </span>
                 </div>
 
@@ -125,7 +125,7 @@
                     <h2>$5.99 <br> SteakandCheese</h2>
 
                     <span class="pricing-table-price">
-                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-rstbeef.jpg">
+                       <img src="images/5.jpg">
                     </span>
                 </div>
 
@@ -141,7 +141,7 @@
                     <h2>$6.99 <br> Tuna</h2>
 
                     <span class="pricing-table-price">
-                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-rotisserie%20(1).jpg">
+                       <img src="images/6.jpg">
                     </span>
                 </div>
 
@@ -161,7 +161,7 @@
                     <h2>$8.99 <br> Veggie</h2>
 
                     <span class="pricing-table-price">
-                        <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-spcyital.jpg">
+                        <img src="images/7.jpg">
                     </span>
                 </div>
 
@@ -177,7 +177,7 @@
                     <h2>$7.99 <br> Italian</h2>
 
                     <span class="pricing-table-price">
-                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-stkchs.jpg">
+                       <img src="images/8.jpg">
                     </span>
                 </div>
 
@@ -193,7 +193,7 @@
                     <h2>$4.99 <br> BlackForestHam</h2>
 
                     <span class="pricing-table-price">
-                      <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-subclub.jpg">
+                      <img src="images/9.jpg">
                     </span>
                 </div>
 
@@ -213,7 +213,7 @@
                     <h2>$8.99 <br> SteakEgg</h2>
 
                     <span class="pricing-table-price">
-                    <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-sandwich-vegdlt.jpg">
+                    <img src="images/10.jpg">
                     </span>
                 </div>
 
@@ -229,7 +229,7 @@
                     <h2>$7.99 <br> EggCheese</h2>
 
                     <span class="pricing-table-price">
-                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-brkfst-baceggchs.jpg">
+                       <img src="images/11.jpg">
                     </span>
                 </div>
 
@@ -245,9 +245,11 @@
                     <h2>$9.99 <br> BaconEgg</h2>
 
                     <span class="pricing-table-price">
-                       <img src="http://www.subway.com/images/Menu/USA/Menu/Categories_Products/ENG/menu-category-brkfst-hameggchs.jpg">
+                       <img src="images/12.jpg">
                     </span>
                 </div>
+
+
 
 
 
@@ -256,7 +258,7 @@
         </div>
     </div> <!-- end pricing-tables -->
 
-
+Images from Subway.com
 </form>
 
 
